create project exceptions, change project services impl to work with dynamoEnhanced, changed converters and dtos